--- a/soft_sensor.ipynb
+++ b/soft_sensor.ipynb
@@ -197,7 +197,14 @@
     "    plt.savefig('Training Report--{}.jpg'.format(model_name))\n",
     "    plt.show()\n",
     "    \n",
-    "def soft_sensor_train(X_train, Y_train, X_val, Y_val,modle_name):\n",
+    "def soft_sensor_train(X_train, Y_train, X_val, Y_val,model_name):\n",
+    "    \"\"\"plot training report   \n",
+    "    Args:\n",
+    "       X_train, Y_train, X_val, Y_val(numpy): training data and validation data\n",
+    "       model_name(str)\n",
+    "    Returns:\n",
+    "       None\n",
+    "    \"\"\"\n",
     "    model = buildLSTMModel(X_train.shape,Y_train.shape[1])\n",
     "    callback = EarlyStopping(monitor=\"val_loss\", patience=5, verbose=1, mode=\"auto\")\n",
     "    reduce_lr = ReduceLROnPlateau(factor=0.2, \n",
@@ -206,8 +213,8 @@
     "                                  patience=10,\n",
     "                                  verbose=1)\n",
     "    history=model.fit(X_train, Y_train_rs, epochs=50, batch_size=100, validation_data=(X_val, Y_val), callbacks=[callback,reduce_lr])\n",
-    "    model.save(\"{}_.h5\".format(modle_name))\n",
-    "    show_train_history(history,\"{}\".format(modle_name))"
+    "    model.save(\"{}_.h5\".format(model_name))\n",
+    "    show_train_history(history,\"{}\".format(model_name))"
    ]
   }
  ],
