--- a/soft_sensor.ipynb
+++ b/soft_sensor.ipynb
@@ -87,12 +87,11 @@
     "       numpy: X ,Y\n",
     "    \"\"\"\n",
     "    X_Window, Y_Window = [], []\n",
-    "    for i in range(df.shape[0]-windowsize+1):\n",
-    "        df_select=df.iloc[i:i+windowsize,0:feature:].drop_duplicates()\n",
-    "        if df_select.shape[0]==df.iloc[i:i+windowsize,0:feature:].shape[0]:\n",
-    "            Y_Window.append(np.array(df.iloc[i+past:i+windowsize,feature:]))\n",
-    "            X_Window.append(np.array(df.iloc[i:i+windowsize,0:feature])) \n",
-    "    Y_Window=np.array(Y_Window).reshape(-1,1)\n",
+    "    for i in range(data.shape[0]-windowsize+1):\n",
+    "        data_select=data.iloc[i:i+windowsize,0:feature:].drop_duplicates()\n",
+    "        if data_select.shape[0]==data.iloc[i:i+windowsize,0:feature:].shape[0]:\n",
+    "            Y_Window.append(np.array(data.iloc[i+windowsize-1,feature:]))\n",
+    "            X_Window.append(np.array(data.iloc[i:i+windowsize,0:feature])) \n",
     "    return np.array(X_Window), np.array(Y_Window)\n",
     "\n",
     "def splitData(X,Y,val_size,mode):\n",
@@ -131,6 +130,7 @@
     "    training_data_up_low_check=up_low_check(training_data)\n",
     "    training_set_norm=data_norm(training_data_up_low_check)\n",
     "    training_set_norm[\"Y_+1\"]=training_set_norm[\"Y\"].shift(-1)\n",
+    "    training_set_norm=training_set_norm.dropna()\n",
     "\n",
     "    X_train_W, Y_train_W = buildWindows(training_set_norm, WindowsSize,featureNum)\n",
     "    X_train, Y_train, X_val, Y_val = splitData(X_train_W, Y_train_W, 0.2)\n",
