--- a/soft_sensor.ipynb
+++ b/soft_sensor.ipynb
@@ -88,8 +88,8 @@
     "    \"\"\"\n",
     "    X_Window, Y_Window = [], []\n",
     "    for i in range(data.shape[0]-windowsize+1):\n",
-    "        data_select=data.iloc[i:i+windowsize,0:feature:].drop_duplicates()\n",
-    "        if data_select.shape[0]==data.iloc[i:i+windowsize,0:feature:].shape[0]:\n",
+    "        if data.iloc[i:i+pastDay+futureDay3,0:feature+y_num].isnull().sum().sum()==0: \n",
+    "            #no null\n",
     "            Y_Window.append(np.array(data.iloc[i+windowsize-1,feature:]))\n",
     "            X_Window.append(np.array(data.iloc[i:i+windowsize,0:feature])) \n",
     "    return np.array(X_Window), np.array(Y_Window)\n",
