--- a/soft_sensor.ipynb
+++ b/soft_sensor.ipynb
@@ -214,7 +214,8 @@
     "                                  verbose=1)\n",
     "    history=model.fit(X_train, Y_train_rs, epochs=50, batch_size=100, validation_data=(X_val, Y_val), callbacks=[callback,reduce_lr])\n",
     "    model.save(\"{}_.h5\".format(model_name))\n",
-    "    show_train_history(history,\"{}\".format(model_name))"
+    "    show_train_history(history,\"{}\".format(model_name))\n",
+    "    return model"
    ]
   }
  ],
